can i go and which places i can go
