# can_i_go_dieye/controllers/place.js
@@ -1,5 +1,7 @@
 const levelModel = require("../models/level");
 const placeModel = require("../models/place");
+const userModel = require("../models/user");
+const Services = require("../services/services");
 
 // get all places
 exports.getAllPlaces = async (req, res) => {
@@ -69,6 +71,46 @@ exports.deletePlace = async (req, res) => {
 		const place = await placeModel.deleteOne({ _id: req.params.id });
 		if (!place) return res.status(404).send("No place found");
 		res.status(204).send(place);
+	} catch (err) {
+		res.status(500).send(err);
+	}
+};
+
+// which places can I go ?
+exports.placesICanGo = async (req, res) => {
+	try {
+		// console.log("req.body", req.body);
+		const user = await userModel.findById(req.body.userId).populate("passId");
+		if (!user) return res.status(404).send("No user found");
+		const levelPassUser = await levelModel.findById(user.passId.level);
+		if (!levelPassUser) return res.status(404).send("No level found");
+		let canGoRecentCase = true;
+		if (levelPassUser.level == "recent case of covid") {
+			canGoRecentCase = await Services.checkIfUserHaveTemporaryPass(user.passId.dateOfCovid);
+		}
+		let placesNameAndAddressAndLevel;
+		let places = [];
+		if (levelPassUser.level === "not vaccinated") {
+			places = await placeModel.find({ minPassLevel: levelPassUser._id, minAge: { $lte: user.age } });
+		} else if (canGoRecentCase) {
+			places = await placeModel.find({ minAge: { $lte: user.age } }).populate("minPassLevel");
+		}
+		console.log("places", places);
+		if (places.length === 0) return res.status(200).send("You can't go anywhere!");
+		placesNameAndAddressAndLevel = places.map(
+			(place) =>
+				"- " +
+				place.name +
+				"; address: " +
+				place.address +
+				"; minimal level: " +
+				place.minPassLevel.level +
+				"; minimal age: " +
+				place.minAge +
+				"\n"
+		);
+		placesNameAndAddressAndLevel = placesNameAndAddressAndLevel.join("");
+		res.status(200).send("Places you can go:\n" + placesNameAndAddressAndLevel);
 	} catch (err) {
 		res.status(500).send(err);
 	}
